--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/IrynaVal/node-practice1#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.9.2",
+    "mongoose": "^7.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
